--- a/include/var-data.ejs
+++ b/include/var-data.ejs
@@ -1,11 +1,11 @@
 <%
 myObj = { "menu": [
-        { "title":"Dashboard", "icon":"insert_chart", "link":"index.html", "target":"_self" },
-        { "title":"Question", "icon":"forum", "link":"product-op.html", "target":"_self" },
-        { "title":"Assignment", "icon":"assignment", "link":"#" , "target":"_self"},
+        { "title":"Dashboard", "icon":"insert_chart", "link":"", "target":"_self" },
+        { "title":"Question", "icon":"forum", "link":"", "target":"_self" },
+        { "title":"Assignment", "icon":"assignment", "link":"index.html" , "target":"_self"},
         { "title":"Course", "icon":"library_music", "link":"#"  , "target":"_self"},
-        { "title":"Admin", "icon":"supervisor_account", "link":"#"  , "target":"_self"},
-        { "title":"Settings", "icon":"settings", "link":"faq.html", "target":"_self" }
+        { "title":"Admin", "icon":"supervisor_account", "link":"admin.html"  , "target":"_self"},
+        { "title":"Settings", "icon":"settings", "link":"", "target":"_self" }
     ] };
 
 sub = { "menu": [
