--- a/assets/style/layout/_menu.scss
+++ b/assets/style/layout/_menu.scss
@@ -57,11 +57,15 @@ body {
     }    
 }
 .custom-item:hover{
-    border-left: 4px solid $text-point;    
+    // border-left: 4px solid $text-point;
+    background-color: lighten($color: $text-point, $amount: 50%);   
     
 }
 
-
+.active{
+    border-left: 4px solid $text-point;    
+    
+}
 // 改變BS4選單hover顏色
 .navbar-light .navbar-nav .nav-link:focus, .navbar-light .navbar-nav .nav-link:hover {
     color: $text-point !important;
