--- a/assets/style/page/_admin.scss
+++ b/assets/style/page/_admin.scss
@@ -24,3 +24,7 @@
 .custom-border-light{
     border: 1px solid lighten($color: $text-font-primary, $amount: 80%) ;
 }
+
+.active1{
+    transform: rotate(180deg);
+}
