--- a/assets/style/page/_admin.scss
+++ b/assets/style/page/_admin.scss
@@ -1,9 +1,11 @@
 .modal-content{
     max-width: 480px;
 }
+
+// table head custom
 .table thead th{
     border-top: 0;
-    border-bottom: 2px solid #000000;
+    border-bottom: 2px solid $text-font-primary;
 }
 .table-sel{
     font-size:.8rem;
@@ -24,7 +26,7 @@
 .custom-border-light{
     border: 1px solid lighten($color: $text-font-primary, $amount: 80%) ;
 }
-
+// admin view arrow_down icon rotate
 .active1{
     transform: rotate(180deg);
 }
