--- a/assets/style/page/_admin.scss
+++ b/assets/style/page/_admin.scss
@@ -27,6 +27,6 @@
     border: 1px solid lighten($color: $text-font-primary, $amount: 80%) ;
 }
 // admin view arrow_down icon rotate
-.active1{
+.arrow-active{
     transform: rotate(180deg);
 }
